Increased test coverage, Travis config file fixes

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = py27, py34, pypy, flake8
-#envlist = py34
+envlist = py27, py33, py34, pypy, flake8
 [testenv]
 deps = 
 	-r{toxinidir}/requirements.txt
