Retry of working travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,27 @@
 language: python
 branches:
         only: master
-matrix:
-        include:
-                - python: 2.7
-                env: {TOX_ENV: py27, COVERAGE: 1}
-                - python: 3.4
-                env: {TOX_ENV: py34}
-                - python: pypy
-                env: {TOX_ENV: pypy}
-                - python: 2.7
-                env: {TOX_ENV: flake8}
-install:
+
+python:
+        - "2.7"
+        - "3.3"
+        - "3.4"
+        - "pypy"
+        - "flake8"
+env:
+        - TOX_ENV="py27"
+        - TOX_ENV="py33"
+        - TOX_ENV="py34"
+        - TOX_ENV="flake8"
+
+install: 
         - travis_retry sudo apt-get update
         - travis_retry pip install tox
+        - "pip install flake8 --use-mirrors"
+        - "pip install -r requirements.txt --use-mirrors"
         - "[ ! -z $COVERAGE ] && travis_retry pip install coveralls || true"
+
 script: tox -e $TOX_ENV
+before_script: "flake8 --ignore=F821"
 after_success:
         - "[ ! -z $COVERAGE ] && coveralls || true"
