--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ deps =
 	-r{toxinidir}/requirements.txt
 	nose
 	coverage
+	coveralls
 commands = 
 	nosetests -v --with-coverage --cover-package=vagquery {posargs}
 
