Added support for Jenkins reports using tox

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
 	coverage
 	coveralls
 commands = 
-	nosetests -v --with-coverage --cover-package=vagquery {posargs}
+	nosetests -v --with-xunit --xunit-file=junit-{envname}.xml --with-coverage --cover-package=vagquery {posargs}
 
 [testenv:flake8]
 deps =
