Added support for line coverage with Jenkins CI

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ deps =
 	coverage
 	coveralls
 commands = 
-	nosetests -v --with-xunit --xunit-file=junit-{envname}.xml --with-coverage --cover-package=vagquery {posargs}
+	nosetests -v --with-xunit --xunit-file=junit-{envname}.xml --with-coverage  --traverse-namespace --cover-package=vagquery --cover-inclusive {posargs} 
+	python -m coverage xml --include=vagquery*
 
 [testenv:flake8]
 deps =
