Fixed some output, changes usage from unittest to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
 envlist = py27, py33, py34, pypy, flake8
 [testenv]
+setenv =
+	PYTHONPATH = {toxinidir}/
 deps = 
 	-r{toxinidir}/requirements.txt
 	nose
-	coverage
-	coveralls
+	pytest
+	pytest-cov 
 commands = 
-	nosetests -v --with-xunit --xunit-file=junit-{envname}.xml --with-coverage  --traverse-namespace --cover-package=vagquery --cover-inclusive {posargs} 
+	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/
 	python -m coverage xml --include=vagquery*
 
 [testenv:flake8]
@@ -15,4 +17,5 @@ deps =
 	{[testenv]deps}
 	flake8
 commands = 
-	flake8 --ignore=F821 vagquery
+	flake8 vagquery 
+	# --ignore=F821 vagquery
