Removed tox requirements for nose

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [tox]
 envlist = py27, py33, py34, pypy, flake8
 [testenv]
-setenv =
-	PYTHONPATH = {toxinidir}/
 deps = 
 	-r{toxinidir}/requirements.txt
 	nose
@@ -10,12 +8,13 @@ deps =
 	pytest-cov 
 commands = 
 	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/
-	python -m coverage xml --include=vagquery*
+	#python -m coverage xml --include=vagquery*
+
+	#nosetests -v --with-xunit --xunit-file=junit-{envname}.xml --with-coverage  --traverse-namespace --cover-package=vagquery --cover-inclusive {posargs} 
 
 [testenv:flake8]
 deps =
 	{[testenv]deps}
 	flake8
 commands = 
-	flake8 vagquery 
-	# --ignore=F821 vagquery
+	flake8 --ignore=F821 vagquery
