--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,19 @@ branches:
 matrix:
         include:
                 - python: 2.7
-                env: {TOX_ENV: py27}
+                  env: {TOX_ENV: py27}
                 - python: 3.3
-                env: {TOX_ENV: py33}
+                  env: {TOX_ENV: py33}
                 - python: 3.4
-                env: {TOX_ENV: py34, COVERAGE: 1}
+                  env: {TOX_ENV: py34, COVERAGE: 1}
                 - python: pypy
-                env: {TOX_ENV: pypy, COVERAGE: 1}
+                  env: {TOX_ENV: pypy} 
                 - python: 2.7
-                env: {TOX_ENV: flake8}
-install: 
+                  env: {TOX_ENV: flake8}
+install:
         - travis_retry sudo apt-get update
         - travis_retry pip install tox
         - "[ ! -z $COVERAGE ] && travis_retry pip install coveralls || true"
-
 script: tox -e $TOX_ENV
-
 after_success:
         - "[ ! -z $COVERAGE ] && coveralls || true"
