Fixed missing files, travis and tox bugs

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,29 @@
 [tox]
-envlist = py27, py33, py34, pypy, flake8
+skipsdist = True
+envlist = py27, py33, py34, pypy, flake8, coverage
 
 [testenv]
 deps = 
 	-r{toxinidir}/requirements.txt
-	nose
 	pytest
-	pytest-cov 
+setenv =
+	PYTHONPATH = {toxinidir}
 commands = 
-	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/
+	py.test --junitxml=junit-{envname}.xml {posargs}
+
+[testenv:coverage]
+deps =
+	{[testenv]deps}
+	pytest-cov
+	coveralls
+commands = 
+	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/ {posargs}
+	python -m coverage xml --include=vagquery*
+	coveralls
 
 [testenv:flake8]
 deps =
 	{[testenv]deps}
 	flake8
 commands = 
-	flake8 --ignore=F821 vagquery
+	flake8 vagquery
