Update project setup to poetry, update packages

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
 skipsdist = True
-envlist = py27, py33, py34, pypy, flake8, coverage
+envlist = py27, py34, py35, py36, py37, pypy, flake8, coverage
 
 [testenv]
-deps = 
+deps =
 	-r{toxinidir}/requirements.txt
 	pytest
 setenv =
 	PYTHONPATH = {toxinidir}
-commands = 
+commands =
 	py.test --junitxml=junit-{envname}.xml {posargs}
 
 [testenv:coverage]
@@ -16,7 +16,7 @@ deps =
 	{[testenv]deps}
 	pytest-cov
 	coveralls
-commands = 
+commands =
 	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/ {posargs}
 	python -m coverage xml --include=vagquery*
 	coveralls
@@ -25,7 +25,7 @@ commands =
 deps =
 	{[testenv]deps}
 	flake8
-commands = 
+commands =
 	flake8 vagquery
 
 [flake8]
