--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ python = "~2.7 || ^3.4 || ^3.5 || ^3.6 || ^3.7"  # Compatible python versions mu
 
 requests = "^2.18.4"
 pytz = "^2018.07"
-responses = "^0.10.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.0.2"
+freezegun = "^0.3.11"
+responses = "^0.10.5"
