Update dependencies, move to poetry

--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,31 @@
 [tox]
+isolated_build = true
 skipsdist = True
 envlist = py27, py34, py35, py36, py37, pypy, flake8, coverage
 
 [testenv]
-deps =
-	-r{toxinidir}/requirements.txt
-	pytest
-setenv =
-	PYTHONPATH = {toxinidir}
+whitelist_externals = poetry
+skip_install = true
 commands =
-	py.test --junitxml=junit-{envname}.xml {posargs}
+    poetry install -v
+    poetry run pytest tests/
+; deps =
+; 	-r{toxinidir}/requirements.txt
+; 	pytest
+; setenv =
+; 	PYTHONPATH = {toxinidir}
+; commands =
+; 	py.test --junitxml=junit-{envname}.xml {posargs}
 
 [testenv:coverage]
-deps =
-	{[testenv]deps}
-	pytest-cov
-	coveralls
 commands =
-	py.test --junitxml=junit-{envname}.xml --cov vagquery tests/ {posargs}
-	python -m coverage xml --include=vagquery*
-	coveralls
+    poetry install -v
+    poetry run pytest tests/ --junitxml=junit-{envname}.xml {posargs}
 
 [testenv:flake8]
-deps =
-	{[testenv]deps}
-	flake8
 commands =
-	flake8 vagquery
+    poetry install -v
+    poetry run flake8 --exclude .tox --ignore=E501
 
 [flake8]
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache,.ropeproject
