--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,34 @@
 language: python
-env:
-        - TOX_ENV=py27
-        - TOX_ENV=py33
-        - TOX_ENV=py34
-        - TOX_ENV=pypy
-        - TOX_ENV=coverage
-        - TOX_ENV=flake8
+matrix:
+        include:
+                - os: linux
+                  python: 2.7
+                  env: TOX_ENV=py27
+                - os: linux
+                  python: 3.4
+                  env: TOX_ENV=py34
+                - os: linux
+                  python: 3.5
+                  env: TOX_ENV=py35
+                - os: linux
+                  python: 3.6
+                  env: TOX_ENV=py36
+                - os: linux
+                  language: python
+                  sudo: required
+                  dist: xenial
+                  python: 3.7
+                  env: TOX_ENV=py37
+                - os: linux
+                  python: 3.6
+                  env: TOX_ENV=coverage
+                - os: linux
+                  python: 3.6
+                  env: TOX_ENV=flake8
 
 install:
         - travis_retry sudo apt-get update
         - travis_retry pip install tox
+        - travis_retry pip install poetry
 
 script: tox -e $TOX_ENV
