Ignore linelength checks

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,8 @@ commands =
 [testenv:flake8]
 commands =
     poetry install -v
-    poetry run flake8 --exclude .tox --ignore=E501
+    poetry run flake8
 
 [flake8]
-exclude = .svn,CVS,.bzr,.hg,.git,__pycache,.ropeproject
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache,.ropeproject,.tox
+ignore = E501
