--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,36 @@
 language: python
 matrix:
-        include:
-                - os: linux
-                  python: 2.7
-                  env: TOX_ENV=py27
-                - os: linux
-                  python: 3.4
-                  env: TOX_ENV=py34
-                - os: linux
-                  python: 3.5
-                  env: TOX_ENV=py35
-                - os: linux
-                  python: 3.6
-                  env: TOX_ENV=py36
-                - os: linux
-                  language: python
-                  sudo: required
-                  dist: xenial
-                  python: 3.7
-                  env: TOX_ENV=py37
-                - os: linux
-                  python: 3.6
-                  env: TOX_ENV=coverage
-                - os: linux
-                  python: 3.6
-                  env: TOX_ENV=flake8
+    include:
+        - os: linux
+          python: 3.9
+          env: TOX_ENV=coverage
+          sudo: required
+          dist: focal
+        - os: linux
+          python: 3.9
+          env: TOX_ENV=flake8
+          sudo: required
+          dist: focal
+        - os: linux
+          python: 3.7
+          env: TOX_ENV=py37
+          sudo: required
+          dist: focal
+        - os: linux
+          python: 3.8
+          env: TOX_ENV=py38
+          sudo: required
+          dist: focal
+        - os: linux
+          language: python
+          python: 3.9
+          env: TOX_ENV=py39
+          sudo: required
+          dist: focal
 
 install:
-        - travis_retry sudo apt-get update
-        - travis_retry pip install tox
-        - travis_retry pip install poetry
+    - travis_retry sudo apt-get update
+    - travis_retry pip install tox
+    - travis_retry pip install poetry
 
 script: tox -e $TOX_ENV
